# essence_backend

./: Dockerfile  README.md  app.py  config.py  docker-compose.debug.yml  docker-compose.yml  package-lock.json  pyproject.toml  reqs.txt  requirements.txt  serverless.yml  test.py
lib/: InternalAppError.py  db.py  dynamodb.py  log.py
services/: audio_processor.py  summarizer.py  util.py
